examples/test/testpolicy1265.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1265
  namespace: namespace218
spec:
  podSelector:
    matchLabels:
      key34: value4
      key33: value9
      key20: value20
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value3
      podSelector:
        matchLabels:
          key16: value19
